# test_own

./: README.md  build_conf  ssh_conf  vim_conf
C++/: LOG
C++/BaiduProduct/: DeploymentInfo  baidu_conf.json  baidu_deploy.cpp  debug_log.cpp  main.cpp
C++/c++11/: CMakeLists.txt
C++/c++11/0-assign/: 30.for.cpp
C++/c++11/1-smartpointer/: smartpointer1.cpp  smartpointer2.cpp  smartpointer3.cpp
C++/c++11/3-lambda/: lambda1.cpp  lambda4.cpp  lambda5.cpp
C++/c++11/4-threads/: 02.thread.para.cpp  03.thread.para.cpp  06.thread.bind.cpp  10.mutex.cpp  11.mutex2.cpp  14.mutex5.cpp  raceCond1.cpp
C++/c++11/5-std/: rvalue.cpp  stdbindfunc2.cpp  stdfunc2.cpp  stdmove2.cpp  stdmove3.cpp
C++/c++11/6-reference/: r1.cpp
C++/c++11/7-misc/: auto.cpp  bind.cpp  mem_fn.cpp
C++/check/: identity.cpp  mobilephone.cpp
C++/cmake/01/: CMakeLists.txt
C++/cmake/01/src/: main.cpp
C++/cmake/02/: CMakeLists.txt  README
C++/cmake/02/src/: main.cpp
C++/curl/: CMakeLists.txt
C++/elementFunc/01/: 3.cpp
C++/learn/Signal/include/: Signal.h  Task.h
C++/learn/Signal/src/: Task.cpp  main.cpp
C++/learn/base64编解码/decode/: decode_64.cpp
C++/learn/base64编解码/encode/: encode_64.cpp
C++/learn/c++11/0-assign/: 01.auto.cpp  20.init.cpp  21.init.cpp  31.for.cpp
C++/learn/c++11/1-smartpointer/: smartpointer4.cpp
C++/learn/c++11/3-lambda/: lambda2.cpp  lambda3.cpp  lambda_cmp.cpp
C++/learn/c++11/4-threads/: 01.thread.basic.cpp  04.thread.para.cpp  05.thread.functor.cpp  12.mutex3.cpp  13.mutex4.cpp  20.condv.1.cpp  async.cpp  basic.cxx  future.cpp  raceCond2.cpp  stopThread2.cpp
C++/learn/check/: identity.cpp  mobilephone.cpp
C++/learn/elementFunc/: README
C++/learn/exception/: 01-exception.cpp
C++/learn/socket/: ThreadBase.h  main.cpp
C++/learn/std::function/: operator_bool.cpp  operator_brackets.cpp  target_type.cpp
C++/normal/: CMakeLists.txt  normal.h
C++/operator/: README
C++/operator/01/: operator.cpp
C++/operator/02/: operator1.cpp  operator2.cpp  operator3.cpp
C++/pachong/: CMakeLists.txt  HtmlPage.h  Readme  Reptile.cc  Reptile.h  filter.h  log  main.cc  name.txt  new.txt  test  test.cpp  test.cpp.bak
C++/pachong_ext/: CMakeLists.txt  Cartoon.h  HomeHtml.h  IHtml.h  PageHtml.h  README  StoryHtml.h  main.cpp
C++/pachong_ext/include/: Cartoon.h  IHtml.h  ThreadPool.h
C++/peripherals/: CMakeLists.txt
C++/peripherals/launch/: start.launch
C++/peripherals/src/: Expression.cpp  IDcardbase.cpp  Printers.cpp  Teleop.cpp  func.cpp  qr_printer.cpp  test_idcard.cpp  test_printer.cpp.bk
C++/project/BaiduProduct/: README  makefile
C++/project/govhall_db/: DBServer.cpp  DBServer.h  govhall.db  main.cpp  test
C++/project/pachong_ext/: CMakeLists.txt  README
C++/project/pachong_ext/include/: HomeHtml.h  PageHtml.h  StoryHtml.h
C++/project/pachong_ext/src/: main.cpp
C++/project/peripherals/: package.xml
C++/regex/: CMakeLists.txt
C++/regex/regex/: 1.cpp
C++/sqlite/: README
C++/std::function/: a.out
C++/test/: 1.cpp  1.txt  2.cpp  3.cpp  4.cpp  5.cpp  a.out  cpuTest.cpp  test  test_jpeg.c
C++/test/jpg/: CMakeLists.txt  base64.cpp  base64.h  base64.success.cpp  jpegenc.c  jpegenc.h  main.cpp
C++/test/jpg/bmp/: bin  bmp.h  bmp2bin.c  bmp2hex.c  cby  code.txt  test  test.cpp
C++/threadPool/: ThreadPool.h  test
C++/threadPool/02/: CMakeLists.txt
C++/time/countdown/: CountDown.cpp  CountDown.h
C/assert/: Assert.c  a.out
C/errno/: errno  errno.c
C/library_functions/: c_setlocale.c
C/log/: 123.txt  a.out  log.c
C/sequence_table/: README  main.c
C/test/: 1.c
C/time/: 1.cpp  a.out
Qt/NLP_CHEN/: BlockQueue.h  NLP_CHEN.pro  chrono_test.cpp  chrono_test.h  comdata.h  comm.h  config_json.cpp  config_json.h  cpluselevennewfeaturetest.cpp  cpluselevennewfeaturetest.h  cplustest.cpp  cplustest.h  debug_log.cpp  debug_log.h  form.cpp  form.h  form.ui  fourssqlite.cpp  fourssqlite.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mode.h  my_fstream.cpp  my_fstream.h  my_json.cpp  my_json.h  my_resolver.cpp  my_resolver.h  my_share_ptr.cpp  my_share_ptr.h  my_string.cpp  my_string.h  my_template.cpp  my_template.h  my_theta.cpp  my_theta.h  my_thread.cpp  my_thread.h  (+26 more)
Qt/cby_socket_project/: cby_socket_project.pro  cloudserver.cpp  cloudserver.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  myclient.cpp  myclient.h  myclient.ui  myserver.cpp  myserver.h  myserver.ui
Qt/happy_holidays/: dbserver.cpp  dbserver.h  happy_holidays.pro  mainwindow.cpp  mainwindow.h  mainwindow.ui  mylogin.cpp  mylogin.h  mylogin.ui
Qt/nlp_view/: baidu.cpp  baidu.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  nlp_view.pro  nlpbase.cpp  nlpbase.h  tuling.cpp  tuling.h
Qt/printker/: mainwindow.h  printker.cpp  printker.h  printker.pro
gcc_g++/: README  hello.c
math_struct/: 1.c
python/HanNuoTa/: hannuota.py
python/killserver/: killui  killwx
python/learn/day01/: 1.py  2.py  3.py  4-list.py  5-while.py
python/learn/day02/: 1-dict.py
python/learn/day03/: keyWordParam.py  my_abs.py  my_calc.py  my_enroll.py  my_move.py  myfunc.py  set.py
python/learn/day04/: fact.py  fact_plus.py  hannuota.py  qushouwei.py
python/learn/day05/: creatlist.py  findMinAndMax.py  foreach.py
python/learn/day06/: generator.py  itor.py  list_create.py  tempCodeRunnerFile.py
python/learn/day07/: func_argc.py
python/learn/day08/: filter.py  map_reduce.py
python/socket/TCP/: Client.py  Server.py
python/sqlite_db/: govhall.db-journal  sqlite_picture.py
python/welcome_boss/: README  welcome_boss.py  welcome_boss.sh
(+65 files in other folders)
